# yt-asr

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_ASR.md  youtube_asr_review_gui.py  youtube_asr_to_dataset.py
install/: linux-required.sh  macos-required.sh  win-required-scoop.bat  win-required.bat
tests/: test_cloud.py  test_dataset_caption_download.py  test_gui_cloud_state.py  test_local_media_import.py  test_manual_sentence.py  test_module_aliases.py
win-launcher/: CMakeLists.txt  README.md  build-launcher.bat
win-launcher/src/: main.cpp
yt_asr/: __init__.py  __main__.py
yt_asr_dataset/: __init__.py  __main__.py
yt_subtitle_extract/: __init__.py  __main__.py  cloud.py  dataset.py  gui.py
