[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-subtitle-extract"
version = "0.1.0"
description = "Download YouTube audio + auto-captions, review timing in a GUI editor, and export ASR training datasets."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "yt-dlp",
]

[project.optional-dependencies]
audio = ["sounddevice>=0.4.6"]
cloud = ["boto3>=1.34", "cryptography>=42.0"]
all   = ["sounddevice>=0.4.6", "boto3>=1.34", "cryptography>=42.0"]

[project.scripts]
yt-asr = "yt_subtitle_extract.gui:main"
yt-asr-dataset = "yt_subtitle_extract.dataset:main"

[tool.setuptools.packages.find]
include = ["yt_subtitle_extract*"]
